# drf_poetry-template

./: .dockerignore  .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml
docker/prod/: .env-postgres-template  .env-template  docker-compose.yaml  init.py  project_example-init-template.sql  project_example.Dockerfile
docker/prod/uwsgi/: uwsgi-template.ini
docker/scripts/: entrypoint-python_venv.sh
docs/: del_autogen.py
docs/source/: conf.py  glossary.md  glossary.rst  index.md  index.rst
docs/source/_static/: func_params.css
docs/source/_templates/autosummary/: base.rst  class.rst  module.rst
docs/source/models/: index.md  index.rst
project_example/: .env-django-template  asgi.py  manage.py  settings.py  wsgi.py
project_example/app_example/: apps.py
project_example/project_example/: asgi.py  celery.py  urls.py  wsgi.py
project_example/project_example/logger/: cmd_formatter.py  filter_log_level_sep.py  log_levels.py
project_example/project_example/logger/handlers/: __init__.py  rotating_file_csv.py
project_example/project_example/settings/: dirs.py  docs.py  settings.py
supervisor/: .env-supervisor-template  back-supervisor.conf  beat-supervisor.conf  worker-supervisor.conf
supervisor/back-conf.d/: project_example-uwsgi_app.conf
supervisor/beat-conf.d/: project_example-celerybeat.conf
supervisor/scripts/: kill.py
supervisor/worker-conf.d/: project_example-celeryd.conf
tests/: __main__.py
