[tool.poetry]
name = "project_example"
version = "0.1.0"
description = ""
authors = ["Author Name <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
djangorestframework = "^3.14.0"
django = "~4.2.7"
python-dotenv = "^1.0.0"
celery = {extras = ["redis"], version = "^5.3.6"}
pandas = "^2.1.3"
openpyxl = "^3.1.2"
numexpr = "^2.8.7"
requests = "^2.31.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
supervisor = "^4.2.5"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[tool.black]
line-length = 119

[tool.isort]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
